removed outer log file

--- a/fullscript/models/tables/fct_orders_items.yml
+++ b/fullscript/models/tables/fct_orders_items.yml
@@ -1,11 +1,10 @@
-version: 2
+version: 1
 
 models:
 
     - name: fct_orders_items
       columns:
           - name: order_key
-            description: unique key for each order from source system
             tests:
                 - not_null
 
@@ -15,7 +14,6 @@ models:
                 - not_null
 
           - name: customer_key
-            description: reference to `dim_customer`
             tests:
                 - not_null
                 - relationships:
@@ -36,12 +34,8 @@ models:
                     field: part_key
 
           - name: supplier_key
-            description: reference to `dim_supplier`
             tests:
                 - not_null
-                - relationships:
-                    to: ref('dim_supplier')
-                    field: supplier_key
 
           - name: return_status_code
             description: return status
@@ -104,7 +98,7 @@ models:
                 - not_null
 
           - name: order_item_count
-            description: represents number of order items, 1 for every row 
+            description: represents number of order items
             tests:
                 - not_null
 
