--- a/fullscript/models/tables/fct_orders.yml
+++ b/fullscript/models/tables/fct_orders.yml
@@ -5,7 +5,7 @@ models:
     - name: fct_orders
       columns:
           - name: order_key
-            description: unique key for each order from source system
+            description: unique key for each order
             tests:
                 - unique
                 - not_null
@@ -26,19 +26,16 @@ models:
           - name: order_status_code
             tests:
                 - not_null
+                - accepted_values:
+                    values:
+                      - P
+                      - O
+                      - F
                 
           - name: order_priority_code
             tests:
                 - not_null
-                
-          - name: order_clerk_name
-            tests:
-                - not_null
-                
-          - name: shipping_priority
-            tests:
-                - not_null
-                                
+                               
           - name: gross_item_sales_amount
             description: pre-discount total of all ordered items
             tests:
